Fixed thumbnails on mobile... by removing mobile styling

--- a/app/assets/stylesheets/layout/grid.css
+++ b/app/assets/stylesheets/layout/grid.css
@@ -8,19 +8,6 @@
   width: 76%;
 }
 
-
-@media(max-width: 700px) {
-  .grid-root {
-    --grid-column-width: 100px;
-  }
-}
-@media(max-width: 900px) {
-  .grid-root {
-    --grid-column-width: 190px;
-  }
-}
-
-
 .grid-root.column-right {
   width: var(--grid-column-width);
   --grid-spacing: 15px;
