--- a/app/assets/stylesheets/ui/thumbs/generic.css
+++ b/app/assets/stylesheets/ui/thumbs/generic.css
@@ -32,19 +32,6 @@ ul.vertical li.generic {
   --thumb-width: 100%;
 }
 
-@media(max-width: 900px) {
-  li.generic {
-    --thumb-width: 135px !important;
-  }
-}
-
-@media(max-width: 700px) {
-  li.generic {
-    --thumb-width: 100px !important;
-    --thumb-width-min: 90px !important;
-  }
-}
-
 tr.activity td + td {
   width: 100%;
 }
