--- a/app/assets/stylesheets/ui/thumbs/tiles.css
+++ b/app/assets/stylesheets/ui/thumbs/tiles.css
@@ -16,15 +16,3 @@
   background: #000 center/cover no-repeat;
   color: #fff;
 }
-
-@media(max-width: 900px) {
-  .tile {
-    --thumb-height: 100px;
-  }
-}
-
-@media(max-width: 700px) {
-  .tile {
-    --thumb-height: 80px;
-  }
-}
